package com.example.backend.controllers;

public class ExerciseController {
}
