package com.example.backend.entities;

public enum Clef {
    BASS,
    TREBLE
}
