package com.example.backend.repositories;

public interface UserRepository {
}
