package com.example.backend.services;

public class ExerciseService {
}
